chore: IDE 경고에 따라 get(0)->getFirst()로 변경