@@ -239,7 +239,7 @@ class CompanyPoolServiceTest {
         PoolDashboardRes result = companyPoolService.getDashboard();
 
         assertThat(result.asOf()).isNotNull();
-        PoolDashboardRes.PoolStatusRes krw = result.pools().get(0);
+        PoolDashboardRes.PoolStatusRes krw = result.pools().getFirst();
         assertThat(krw.status()).isEqualTo("BELOW_FLOOR");
         assertThat(krw.utilizationRate()).isEqualByComparingTo("0.7000");
         assertThat(krw.recommendedAction().type()).isEqualTo("BUY");
@@ -264,7 +264,7 @@ class CompanyPoolServiceTest {
 
         PoolDashboardRes result = companyPoolService.getDashboard();
 
-        PoolDashboardRes.PoolStatusRes krw = result.pools().get(0);
+        PoolDashboardRes.PoolStatusRes krw = result.pools().getFirst();
         assertThat(krw.status()).isEqualTo("ABOVE_CEILING");
         assertThat(krw.utilizationRate()).isEqualByComparingTo("1.3000");
         assertThat(krw.recommendedAction().type()).isEqualTo("SELL");
@@ -308,7 +308,7 @@ class CompanyPoolServiceTest {
 
         PoolDashboardRes result = companyPoolService.getDashboard();
 
-        PoolDashboardRes.PoolStatusRes krw = result.pools().get(0);
+        PoolDashboardRes.PoolStatusRes krw = result.pools().getFirst();
         assertThat(krw.status()).isEqualTo("BELOW_FLOOR");
         assertThat(krw.recommendedAction().amount()).isNotNull();
         assertThat(krw.recommendedAction().counterAmount()).isNull();
